made authorization without email verification