@@ -16,7 +16,7 @@ public class GetDeliveryMethodByIdMapperResultToResponseEntity implements GetDel
 
     @Override
     public ResponseEntity<?> processNotFound(GetDeliveryMethodById.Result.NotFound result) {
-        String errorMessage = "Product with id '%d' not found".formatted(result.getDeliveryMethodId());
+        String errorMessage = String.format( "Product with ID '%s' not found", result.getDeliveryMethodId());
         SimpleResponseErrorDto errorDto = SimpleResponseErrorDto.of(errorMessage, HttpStatus.NOT_FOUND);
         return new ResponseEntity<>(errorDto, HttpStatus.NOT_FOUND);
     }
